修改zuul中配置文件

--- a/application-zuul-dev.yml
+++ b/application-zuul-dev.yml
@@ -6,6 +6,8 @@ zuul:
     #配置别名，只要用户输入/user/之类的路径名则映射到设置的服务名上
     plat.serviceId: plat-service
     plat.path: "/plat/**"
+    product.serviceId: product-service
+    product.path: "/product/**"
   #配置禁用使用服务名访问服务，如果不进行配置，使用别名、服务名都可以访问到服务
   #这里配置*指禁用所有的服务使用服务名访问，否则需要一个一个配置
   ignored-services: "*"
