--- a/application-common-dev.yml
+++ b/application-common-dev.yml
@@ -4,3 +4,17 @@ server:
 spring:
   application:
     name: common-service
+feign:
+  hystrix:
+    enabled: true
+    hystrix:
+	shareSecurityContext: true
+	command:
+	    default:
+	        circuitBreaker:
+		    sleepWindowInMilliseconds: 100000
+		    forceClosed: true
+	        execution:
+		    isolation:
+		        thread:
+		            timeoutInMilliseconds: 600000
