--- a/application-common-dev.yml
+++ b/application-common-dev.yml
@@ -4,17 +4,15 @@ server:
 spring:
   application:
     name: common-service
+hystrix:
+  command:
+    default: #default全局有效，service id指定应用有效
+      execution:
+        timeout: #如果enabled设置为false，则请求超时交给ribbon控制,为true,则超时作为熔断根据
+          enabled: true
+        isolation:
+          thread:
+            timeoutInMilliseconds: 100000 #断路器超时时间，默认1000ms
 feign:
   hystrix:
     enabled: true
-    hystrix:
-	shareSecurityContext: true
-	command:
-	    default:
-	        circuitBreaker:
-		    sleepWindowInMilliseconds: 100000
-		    forceClosed: true
-	        execution:
-		    isolation:
-		        thread:
-		            timeoutInMilliseconds: 600000
