--- a/application-zuul-dev.yml
+++ b/application-zuul-dev.yml
@@ -15,6 +15,9 @@ zuul:
   ignored-services: "*"
   #设置访问前缀
   prefix: /services
+  host: 
+      socket-timeout-millis: 10000
+      connect-timeout-millis: 10000
 spring:
   application:
     name: zuul-gateway
