--- a/application-common-dev.yml
+++ b/application-common-dev.yml
@@ -5,9 +5,5 @@ spring:
     name: common-service
 feign:
   hystrix:
-    enabled: true
-ribbon: 
-    ReadTimeout: 60000
-    ConnectTimeout: 60000
-    MaxAutoRetries: 0
-    MaxAutoRetriesNextServer: 1
+    enabled: false
+
