--- a/application-zuul-dev.yml
+++ b/application-zuul-dev.yml
@@ -2,9 +2,6 @@ server:
   port: 9527
 
 zuul:
-  host:
-    connect-timeout-millis: 10000
-    socket-timeout-millis: 60000
   routes:
     #配置别名，只要用户输入/user/之类的路径名则映射到设置的服务名上
     plat.serviceId: plat-service
@@ -28,3 +25,8 @@ hystrix:
                 isolation:
                     thread:
                         timeoutInMilliseconds: 60000
+ribbon:
+  ReadTimeout: 60000
+  ConnectTimeout: 60000
+  MaxAutoRetries: 0
+  MaxAutoRetriesNextServer: 1
