公共模块添加elasticSearch

--- a/application-common-dev.yml
+++ b/application-common-dev.yml
@@ -6,6 +6,10 @@ server:
 spring:
   application:
     name: common-service
+  data:
+    elasticsearch:
+      cluster-name: elasticsearch
+      cluster-nodes: 127.0.0.1:9300 #9200是图形界面端,9300代码端
 feign:
   hystrix:
     enabled: false
