--- a/application-product-dev.yml
+++ b/application-product-dev.yml
@@ -5,7 +5,7 @@ spring:
     name: product-service
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/igou_product
+    url: jdbc:mysql://47.102.112.90:53306/igou_product
     username: root
     password: 123456
 mybatis-plus:
